manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: jondepannage
    name: jondepannage
    namespace: jondepannage
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: jondepannage
    template:
        metadata:
            labels:
                io.kompose.service: jondepannage
        spec:
            containers:
                - image: ghcr.io/tsukoyachi/jondepannage:c9bdb7071dea16da7fdabe287df0dad98a0cd271
                  name: jondepannage
                  ports:
                      - containerPort: 3000
                        protocol: TCP
                  resources:
                      requests:
                          cpu: '50m'
                          memory: '128Mi'
                      limits:
                          cpu: '500m'
                          memory: '512Mi'
                  env: []
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 15
                      periodSeconds: 10
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 5
                      periodSeconds: 20
            restartPolicy: Always
