manifest/service.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: jondepannage
    name: jondepannage
    namespace: jondepannage
spec:
    ports:
        - name: '3000'
          port: 3000
          targetPort: 3000
    selector:
        io.kompose.service: jondepannage
