manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-jondepannage
    namespace: jondepannage
    annotations:
        cert-manager.io/cluster-issuer: cloudflare-dns
        traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
spec:
    tls:
        - hosts:
              - jondepannage.tsukoyachi.ovh
          secretName: jondepannage-tls
    rules:
        - host: jondepannage.tsukoyachi.ovh
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: jondepannage
                            port:
                                number: 80
